--- a/client/src/components/Employee/EmployeeMessages.css
+++ b/client/src/components/Employee/EmployeeMessages.css
@@ -1,10 +1,11 @@
 .employee-messages {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 60px);
   background-color: #f5f7fb;
   padding: 20px;
-  height: calc(100vh - 80px);
 }
 
 @media (max-width: 768px) {
